testsuite/tests/ghci/should_fail/all.T
test('T10549', [], ghci_script, ['T10549.script'])
test('T10549a', [], ghci_script, ['T10549a.script'])
test('T14608', [], ghci_script, ['T14608.script'])
test('T15055', [], ghci_script, ['T15055.script'])
